--- a/index.css
+++ b/index.css
@@ -115,3 +115,23 @@ li a.active {
     width: 80%;
     height: 100%;
 }
+@media only screen and (max-width: 600px){
+    #right_section #image img {
+        width: 110px;
+        height: 110px;
+        margin-left: 25px;
+      }
+      #left_section {
+        width: 35%;
+      }
+      #right_section {
+        width: 65%;
+      }
+      #right_section #content #title {
+        font-size: 40px;
+      }
+      #right_section #image {
+        margin-top: 70%;
+      }
+} 
+   
