--- a/index.css
+++ b/index.css
@@ -1,119 +1,126 @@
-body{
-    font-family: 'Times New Roman', Times, serif;
+body {
+  font-family: "Times New Roman", Times, serif;
 }
-#main{
-    display: flex;
+#main {
+  display: flex;
 }
-#left_section{
-    width: 25%;
-    height: 100vh;
-    background-image: linear-gradient(to bottom right,rgb(225, 230, 236), rgb(172, 206, 240));
-    display: flex;
-    flex-direction: column;
-}
-
-#left_section #profile_img{ 
-    width: 70%;
-    height: 180px;
-    border-radius: 50%;
-    align-self: center;
-    margin-top: 30px;
-
+#left_section {
+  width: 25%;
+  height: 100vh;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(225, 230, 236),
+    rgb(172, 206, 240)
+  );
+  display: flex;
+  flex-direction: column;
 }
 
-#profile_img img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+#left_section #profile_img {
+  width: 70%;
+  height: 180px;
+  border-radius: 50%;
+  align-self: center;
+  margin-top: 30px;
 }
 
-#left_section #info{
-    text-align: center;
+#profile_img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
-#left_section #info #name{
-    font-size: 22px;
-    font-weight: 700;
-    font-family: 'Times New Roman', Times, serif;
-    color: black;
+#left_section #info {
+  text-align: center;
 }
 
-#left_section #info #description{
-    font-size: 16px;
+#left_section #info #name {
+  font-size: 22px;
+  font-weight: 700;
+  font-family: "Times New Roman", Times, serif;
+  color: black;
 }
 
-#left_section #info #description span{
-    color: rgb(84, 84, 250);
+#left_section #info #description {
+  font-size: 16px;
 }
-#left_section nav{
 
+#left_section #info #description span {
+  color: rgb(84, 84, 250);
 }
-#left_section nav ul{
-    padding: 0px;
+#left_section nav {
 }
-#left_section nav ul li{
-    list-style-type: none;
-    text-align: center;
-    padding: 6px 0px;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 12px;
-    text-decoration: none;
-} 
-li a{
-    text-decoration: none;
-    color:black;
-    display: block;
+#left_section nav ul {
+  padding: 0px;
+}
+#left_section nav ul li {
+  list-style-type: none;
+  text-align: center;
+  padding: 6px 0px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 12px;
+  text-decoration: none;
+}
+li a {
+  text-decoration: none;
+  color: black;
+  display: block;
 }
 li a.active {
-    background-color: rgba(255, 255, 255, 0.623);
+  background-color: rgba(255, 255, 255, 0.623);
 }
 
-#left_section nav ul li a:hover{
-    color:rgb(75, 75, 241);
+#left_section nav ul li a:hover {
+  color: rgb(75, 75, 241);
 }
-#left_section footer{
-    text-align: center;
-    padding: 0px 20px;
-    font-size: 14px;
-    color: rgb(56, 51, 51);
+#left_section footer {
+  text-align: center;
+  padding: 0px 20px;
+  font-size: 14px;
+  color: rgb(56, 51, 51);
 }
-#right_section{
-    width: 75%;
-    display: flex;
-    background-color: rgb(213, 225, 236);
+#right_section {
+  width: 75%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgb(213, 225, 236);
+  height: 100vh;
 }
 #right_section #content {
-    width: 40%;
-    height: 100%;
+  width: 40%;
+  height: auto;
 }
 
-#right_section #content #title{
-    font-size: 56px;
-    font-weight: 700;
-    align-self: center;
-    margin-top: 180px;
-    margin-left: 30px;
-    margin-bottom: 0px;
+#right_section #content #title {
+  font-size: 56px;
+  font-weight: 700;
+  align-self: center;
+  margin-top: 180px;
+  margin-left: 30px;
+  margin-bottom: 0px;
 }
-#right_section #content #description{
-    font-size: 18px;
-    margin-left: 30px;
+#right_section #b{
+    margin-bottom: 180px;
+    margin-top: -100px;
 }
-#right_section #content button{
-    padding: 8px 18px;
-    margin-left: 30px;
-    border-color: rgb(152, 218, 218);
-    cursor: pointer;
-    
+#right_section #b #description {
+  font-size: 18px;
+  margin-left: 30px;
 }
-#right_section #image{
-    width: 60%;
-    height: 70%;
+#right_section #b button {
+  padding: 8px 18px;
+  margin-left: 30px;
+  border-color: rgb(152, 218, 218);
+  cursor: pointer;
 }
-#right_section #image img{
-    width: 80%;
-    height: 100%;
+#right_section #image {
+  width: 60%;
+  height: 70%;
+}
+#right_section #image img {
+  width: 80%;
+  height: 100%;
 }
 @media only screen and (max-width: 600px){
     #right_section #image img {
@@ -132,6 +139,25 @@ li a.active {
       }
       #right_section #image {
         margin-top: 70%;
+        height: auto;
+      }
+
+      #left_section #profile_img {
+        height: 100px;
+      }
+      #right_section #b{
+        margin-top: 0px;
+      }
+      #right_section #b #description {
+        font-size: 12px;
+        padding:10px 30px;
+        margin-left: 0px;
+      }
+      #right_section #b button {
+        padding: 6px 12px;
+        margin-left: 30px;
+        border-color: rgb(152, 218, 218);
+        cursor: pointer;
       }
 } 
    
