--- a/index.css
+++ b/index.css
@@ -100,19 +100,25 @@ li a.active {
   margin-left: 30px;
   margin-bottom: 0px;
 }
-#right_section #b{
-    margin-bottom: 180px;
-    margin-top: -100px;
+#right_section #b {
+  margin-bottom: 180px;
+  margin-top: -100px;
 }
-#right_section #b #description {
-  font-size: 18px;
+#right_section #b #description2 {
+  font-size: 20px;
   margin-left: 30px;
+  color: rgb(48, 70, 179);
+  margin-top: -40px;
+  font-weight: 600;
 }
 #right_section #b button {
   padding: 8px 18px;
   margin-left: 30px;
   border-color: rgb(152, 218, 218);
   cursor: pointer;
+  margin-top: 20px;
+}
+.typed-fade-out {
 }
 #right_section #image {
   width: 60%;
@@ -122,49 +128,54 @@ li a.active {
   width: 80%;
   height: 100%;
 }
-@media only screen and (max-width: 600px){
-    #right_section #image img {
-        width: 110px;
-        height: 110px;
-        margin-left: 25px;
-      }
-      #left_section {
-        width: 35%;
-      }
-      #right_section {
-        width: 65%;
-      }
-      #right_section #content #title {
-        font-size: 40px;
-      }
-      #right_section #image {
-        margin-top: 70%;
-        height: auto;
-      }
+@media only screen and (max-width: 600px) {
+  #right_section #image img {
+    width: 110px;
+    height: 110px;
+    margin-left: 25px;
+  }
+  #left_section {
+    width: 35%;
+  }
+  #right_section {
+    width: 65%;
+  }
+  #right_section #content #title {
+    font-size: 40px;
+  }
+  #right_section #image {
+    margin-top: 70%;
+    height: auto;
+  }
 
-      #left_section #profile_img {
-        height: 100px;
-      }
-      #right_section #b{
-        margin-top: 0px;
-      }
-      #right_section #b #description {
-        font-size: 12px;
-        padding:10px 30px;
-        margin-left: 0px;
-      }
-      #right_section #b button {
-        padding: 6px 12px;
-        margin-left: 30px;
-        border-color: rgb(152, 218, 218);
-        cursor: pointer;
-      }
-      #left_section #info #description {
-    font-size: 10px;
+  #left_section #profile_img {
+    height: 100px;
+  }
+  #right_section #b {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+  }
+  #right_section #b #description2 {
+    font-size: 20px;
+    padding: 10px 30px; 
+    margin-left: 0px;
+    color: rgb(41, 88, 150);
+  }
+
+  #right_section #b button {
+    padding: 6px 12px;
+    margin-left: 30px;
+    border-color: rgb(152, 218, 218);
+    cursor: pointer;
+    margin-top: 5px
+  }
+
+  #left_section #info #description {
+    font-size: 12px;
   }
   #left_section footer{
     font-size: 10px;
     color: rgb(37, 36, 36);
   }
-} 
-   
+}
