--- a/resources/contact.css
+++ b/resources/contact.css
@@ -1,6 +1,9 @@
 #body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+body{
+  margin: 0;
+}
 #mains {
   display: flex;
   height: 110vh;
@@ -181,7 +184,7 @@ form #txt_field {
 #txt_field input:focus ~ span::before {
   width: 100%;
 }
-input[type="submit"] {
+button[type="submit"] {
   width: 100%;
   height: 40px;
   border: 1px solid;
@@ -194,7 +197,7 @@ input[type="submit"] {
   outline: none;
   margin-bottom: 6px;
 }
-input[type="submit"]:hover {
+button[type="submit"]:hover {
   border-color: #3e99e9;
   transition: 0.4s;
   background-color: rgb(208, 221, 233);
@@ -296,8 +299,7 @@ input[type="submit"]:hover {
       padding: 0px 20px;
       box-sizing: border-box;
     }
-      #mains #content #form p {
+    #mains #content #form p {
       font-size: 15px;
     }
-    
 }
